[tool.poetry]
name = "pentest-toolbox"
version = "0.1.0"
description = "Toolbox de pentest modulaire conteneurisee avec FastAPI"
authors = ["Arthur"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.6", extras = ["standard"] }
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"
celery = "^5.4.0"
redis = "^5.0.8"
psycopg = { version = "^3.2.1", extras = ["binary"] }
minio = "^7.2.8"
cryptography = "^43.0.1"
httpx = "^0.27.2"
paramiko = "^3.5.0"
sslyze = "^6.3.1"
itsdangerous = "^2.2.0"
qrcode = "^8.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
